--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
+    "google-auth-library": "^10.4.1",
+    "googleapis": "^163.0.0",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
